--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install mlflow scikit-learn pandas numpy joblib fastapi uvicorn prometheus_client
 
     - name: Lint Python code
       run: |
