--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,7 +45,7 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t $IMAGE_NAME .
+        docker build -t $IMAGE_NAME MLProject/
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
