--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,11 +25,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install mlflow scikit-learn pandas numpy joblib fastapi uvicorn prometheus_client
+        pip install mlflow scikit-learn pandas numpy joblib fastapi uvicorn prometheus_client flake8
 
     - name: Lint Python code
       run: |
-        pip install flake8
         flake8 MLProject/ --max-line-length=120 --ignore=E203,W503 --exit-zero
 
     - name: Run training script
@@ -40,12 +39,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: model-artifacts
-        path: |
-          MLProject/model/
-
-    - name: Build Docker image
-      run: |
-        docker build -t $IMAGE_NAME MLProject/
+        path: MLProject/model/
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -53,9 +47,11 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+    - name: Build Docker image
+      run: docker build -t $IMAGE_NAME MLProject/
+
     - name: Push Docker image
-      run: |
-        docker push $IMAGE_NAME
+      run: docker push $IMAGE_NAME
 
     # (Opsional) Deploy ke server/container jika diperlukan
     # - name: Deploy to server
